<?xml version="1.0" encoding="utf-8"?>
<resources>
		<string name="today">Today</string>
		<string name="no_subjects_for_today">No courses for today. Coffee?</string>
	    <string name="schedule">Timetable</string>
	    <string name="lecturers">Instructors</string>
	    <string name="passed">Done</string>
	    <string name="lecturer">Instructor</string>
		<string name="app_name">StudiPlaner</string>
		<string name="request">Request!</string>
	    <string name="post">Wall post!</string>
	    <string name="deletePost">Delete post</string>
	    <string name="day">Day</string>
	    <string name="pleasePressPlus">Please press</string>
	    <string name="noSemester">No semesters.</string>
	    <string name="noSubjectsForToday">No courses for that day.</string>
	    <string name="noSubjects">No courses created.</string>
	    <string name="noNotes">No assignments added.</string>
	    <string name="noLecturers">No instructor created.</string>
	    <string name="deleteSemester">Really delete this semester? All courses for this semester will also be deleted.</string>
	    <string name="subjectEmail">Your timetable of Studi Planner</string>
	    <string name="contentEmail">You have requested an XML version of your timetable:\n\n</string>
	    <string name="confirmSubjectDelete">Do you really want to delete the course?</string>
	    <string name="confirmDozenteDelete">Do you really want to delete the instructor?</string>
	    <string name="now">Now</string>
	    <string name="next">Next</string>
	    <string name="seminar">Seminar</string>
	    <string name="add">Add</string>
	    <string name="check_date">Wrong ending date. The ending date is in the past.</string>
	    <string name="check_time">Wrong ending time. Ending time is earlier than start time.</string>
	    <string name="subjects">Courses</string>
	    <string name="semester">Semester</string>
	    <string name="semesterOverview">Semesters</string>
	    <string name="lecturersOverview">Instructors</string>
	    <string name="exportAllSemester">Export all semesters</string>
	    <string name="cancel">Cancel</string>
	    <string name="save">Save</string>
	    <string name="send">Send</string>
	    <string name="room">Location</string>
	    <string name="subjectType">Course type</string>
	    <string name="begin">Start</string>
	    <string name="semesterName">Semester name</string>
	    <string name="end">End</string>
	    <string name="back">Back</string>
	    <string name="name">Name</string>
	    <string name="timeRemaining">Remaining time</string>
	    <string name="youHaveFree">You\'ve this day off. Coffee?</string>
		<string name="dayPrompt">Day</string>
		<string name="subjectTypePrompt">Course type</string>
		<string name="lecturerPrompt">Instructor</string>
		<string name="not_selected">Not selected</string>
		<string name="warning">Attention</string>
		<string name="please_fill">Please fill in the following fields: </string>
		<string name="mo">Mo</string>
		<string name="tu">Tu</string>
		<string name="wed">Wed</string>
		<string name="thu">Thu</string>
		<string name="fr">Fr</string>
		<string name="sa">Sa</string>
		<string name="su">Su</string>
		<string name="mo_long">Monday</string>
		<string name="tu_long">Tuesday</string>
		<string name="wed_long">Wednesday</string>
		<string name="thu_long">Thursday</string>
		<string name="fr_long">Friday</string>
		<string name="sa_long">Saturday</string>
		<string name="su_long">Sunday</string>
		<string name="hello_fb">Before you can post on Facebook, you must register for this.</string>
		<string name="error_xml_import">Failed to import XML</string>
		<string name="note">Assignment</string>
		<string name="importMenuName">Import</string>
		<string name="importName">Import</string>
		<string name="please_enter_xml_url">Please enter the URL to the XML file:</string>
		<string name="make_sure_valid">Please make sure that the XML syntax is correct.</string>
		<string name="no_notice_descr">No assignments added</string>
		<string name="no_lecturer_descr">no instructor selected</string>
		<string name="no_room_descr">no location saved</string>
		<string name="no_subject_descr">no course name</string>
		<string name="subjects_updated">Courses updated</string>
		<string name="subjects_added">Courses added</string>
		<string name="lecturer_updated">Instructors updated</string>
		<string name="lecturer_added">Instructors added</string>
		<string name="semester_updated">Semesters added</string>
		<string name="semester_added">Semesters updated</string>
		<string name="notes_added">Assignments added</string>
		<string name="notes_updated">Assignments updated</string>
		<string name="preferences">Settings</string>
		<string name="subject_type">Course type</string>
		<string name="welcome">Welcome to StudiPlaner</string>
		<string name="intro_help">Create a semester schedule:</string>
		<string name="help_step1">First, create a semester or more instructors.</string>
		<string name="help_step2">On the semester overview click on the desired semester and then add some courses.</string>
		<string name="help_step3">Among the courses and instructors, you can save assignments, by clicking on the corresponding list items.</string>
		<string name="help_step4">Post your events on Facebook, if desired.</string>
		<string name="intro_help2">Import records</string>
		<string name="help2_step1">Make sure to regularly backup your database using the export function.</string>
		<string name="help2_step2">Edit the XML tree on your PC and load it up on an FTP server. Now you can import the URL in StudiPlaner.</string>
	    <string name="help_footer">Good luck!</string>
	    <string name="time">Time</string>
	    <string name="postOnFacebook">Post on Facebook</string>
	    <string name="yes">Yes</string>
	    <string name="no">No</string>
	    <string name="update">Update</string>
	    <string name="file_not_found">File not Found at given URL</string>
	    <string name="xml_not_valid">The xml file is not valid.</string>
	    <!-- Seminar typen -->
		<string name="subject">Course</string>
		<string name="classSub">Class</string>
		<string name="studygroup">Study Group</string>
	    <string name="lecture">Lecture</string>
	    <string name="exercice">Exercice</string>
	    <string name="practical">Practical</string>
    	<!-- 20.12.2010 -->
    	<string name="timetable">Timetable</string>
    	<string name="todo">To-Do</string>
    	<string name="pass">Pass</string>
    	<string name="memocard">Memocard</string>
    	<string name="books">Books</string>
    	<string name="edit">Edit</string>
    	<string name="select">Select</string>
    	<string name="title">Title</string>
    	<string name="tags">Tags</string>
    	<string name="no_semester">No current semester.</string>
    	<string name="export">Export</string>
    	<string name="mail">E-Mail</string>
    	<string name="delete">Delete</string>
    	<string name="ok">OK</string>
    	<string name="attention_import">Attention: All local data will be replaced.</string>
    	<string name="no_current_semester">There is no current semester.</string>
    	<string name="add_semester">Add Semester</string>
</resources>