<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.studiplaner"
	style="@style/root_view">
	<LinearLayout
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:orientation="vertical">
		<TextView
			style="@style/label"
			android:text="@string/subject" />
		<EditText
			android:id="@+id/subject"
			style="@style/textfield" />
		<TextView
			style="@style/label"
			android:text="@string/room" />
		<EditText
			android:id="@+id/room"
			style="@style/textfield" />
		<TextView
			style="@style/label"
			android:text="@string/lecturer" />
		<Spinner
			android:id="@+id/dozent_select"
			android:prompt="@string/lecturerPrompt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<TextView
			style="@style/textfield"
			android:text="@string/subject_type" />
		<Spinner
			android:id="@+id/subject_type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:prompt="@string/subjectTypePrompt" />
		<TextView
			android:id="@+id/selectDayLabel"
			style="@style/label"
			android:text="@string/day" />
		<Spinner
			android:id="@+id/day"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:prompt="@string/dayPrompt" />
		<TextView
			style="@style/label"
			android:text="@string/begin" />
		<TimePicker
			android:id="@+id/time_anfang"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
		<TextView
			style="@style/label"
			android:text="@string/end" />
		<TimePicker
			android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
		<include
			layout="@layout/buttons" />
	</LinearLayout>
</ScrollView>