<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.studiplaner"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:padding="5dip"
	android:background="@color/background">
	<LinearLayout
		android:id="@+id/widget30"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView
			android:id="@+id/subjectView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/subject"
			android:textSize="14dip"
			android:textColor="@color/form_textcolor"></TextView>
		<EditText
			android:id="@+id/subject"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textSize="14dip"></EditText>
		<LinearLayout
			android:id="@+id/LinearLayout04"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_width="fill_parent">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/TextView03"
				android:text="@string/room"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<EditText
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:id="@+id/room"
				android:textSize="14dip"></EditText>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/LinearLayout07"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_width="fill_parent">
			<TextView
				android:id="@+id/TextView01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lecturer"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<LinearLayout
				android:id="@+id/LinearLayout08"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<Spinner
					android:id="@+id/dozent_select"
					android:prompt="@string/lecturerPrompt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"></Spinner>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/LinearLayout01"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_width="fill_parent">

			<TextView
				android:id="@+id/TextView04"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/subject_type"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<Spinner
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/subject_type"
				android:prompt="@string/subjectTypePrompt"></Spinner>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/LinearLayout09"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_width="fill_parent">
			<TextView
				android:id="@+id/selectDayView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/day"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<Spinner
				android:id="@+id/day"
				android:layout_height="wrap_content"
				android:prompt="@string/dayPrompt"
				android:layout_width="wrap_content"></Spinner>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/LinearLayout05"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<LinearLayout
				android:id="@+id/LinearLayout06"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<TextView
					android:id="@+id/selectTimeView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/begin"
					android:textSize="14dip"
					android:textColor="@color/form_textcolor"></TextView>
				<TimePicker
					android:layout_height="wrap_content"
					android:id="@+id/time_anfang"
					android:layout_width="wrap_content"></TimePicker>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/LinearLayout06"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginLeft="0px">
			<TextView
				android:id="@+id/selectTimeView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/end"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<TimePicker
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/time_ende"></TimePicker>
		</LinearLayout>
		<include
			layout="@layout/buttons" />
	</LinearLayout>
</ScrollView>