<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.studiplaner"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:background="@color/background">
	<LinearLayout
		android:id="@+id/LinearLayout02"
		android:padding="5dip"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="top|center_horizontal">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button
				android:text="@string/back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="finish"></Button>
		</LinearLayout>
		<com.facebook.android.LoginButton
			android:id="@+id/login"
			android:src="@drawable/login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="30dp"
			android:background="@drawable/login_button" />
		<TextView
			android:id="@+id/txt"
			android:text="@string/hello_fb"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:gravity="center_horizontal"
			android:padding="5px"
			android:textSize="14dip"
			android:textColor="@color/listitem_text_color" />
		<Button
			android:id="@+id/requestButton"
			android:text="@string/request"
			android:visibility="invisible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="20dp"
			android:paddingLeft="20dp"
			android:layout_margin="20dp" />
		<Button
			android:id="@+id/postButton"
			android:text="@string/post"
			android:visibility="invisible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="20dp"
			android:paddingLeft="20dp"
			android:layout_margin="20dp" />
		<Button
			android:id="@+id/deletePostButton"
			android:text="@string/delete"
			android:visibility="invisible"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingRight="20dp"
			android:paddingLeft="20dp"
			android:layout_margin="20dp" />
	</LinearLayout>
</ScrollView>