<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.studiplaner"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_horizontal"
	android:background="#5b5c66" android:padding="5dip">
	<LinearLayout android:layout_height="wrap_content"
		android:paddingLeft="10px" android:paddingRight="10px"
		android:layout_width="fill_parent" android:orientation="vertical">
		<LinearLayout android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent" android:layout_height="40px"
			android:gravity="center_vertical|center_horizontal" android:layout_marginBottom="10dip">
			<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/welcome"
				android:textColor="#f46708" android:textSize="18dip"></TextView>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:layout_marginBottom="15px">
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="8px">
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:text="@string/intro_help"
					android:textColor="#f46708" android:textSize="14dip"></TextView>

			</LinearLayout>
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="10px">
				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_weight="0.1" android:layout_width="0dip"
					android:layout_height="30px">
					<TextView android:id="@+id/TextView02"
						android:text="1"
						android:background="@layout/rounded_corner_number"
						android:gravity="center_vertical|center_horizontal"
						android:textColor="#804f06" android:layout_height="20dip" android:layout_width="20dip"></TextView>
				</LinearLayout>
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:textColor="#ffffff" android:text="@string/help_step1" android:textSize="13dip"></TextView>

			</LinearLayout>
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="10px">
				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_weight="0.1" android:layout_width="0dip"
					android:layout_height="30px">
					<TextView android:id="@+id/TextView02"
						android:background="@layout/rounded_corner_number" android:text="2"
						android:gravity="center_vertical|center_horizontal"
						android:textColor="#804f06" android:layout_height="20dip" android:layout_width="20dip"></TextView>
				</LinearLayout>
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:textColor="#ffffff" android:text="@string/help_step2" android:textSize="13dip"></TextView>

			</LinearLayout>
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="10px">
				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_weight="0.1" android:layout_width="0dip"
					android:layout_height="30px">
					<TextView android:id="@+id/TextView02"
						android:background="@layout/rounded_corner_number" android:text="3"
						android:gravity="center_vertical|center_horizontal"
						android:textColor="#804f06" android:layout_height="20dip" android:layout_width="20dip"></TextView>
				</LinearLayout>
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:textColor="#ffffff" android:text="@string/help_step3" android:textSize="13dip"></TextView>

			</LinearLayout>
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="20dip">
				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_weight="0.1" android:layout_width="0dip"
					android:layout_height="30px">
					<TextView android:id="@+id/TextView02"
						android:background="@layout/rounded_corner_number" android:text="4"
						android:gravity="center_vertical|center_horizontal"
						android:textColor="#804f06" android:layout_height="20dip" android:layout_width="20dip"></TextView>
				</LinearLayout>
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:textColor="#ffffff" android:text="@string/help_step4" android:textSize="13dip"></TextView>

			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical">
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="8px">
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:textColor="#f46708"
					android:text="@string/intro_help2" android:textSize="14dip"></TextView>

			</LinearLayout>
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="10px">
				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_weight="0.1" android:layout_width="0dip"
					android:layout_height="30px">
					<TextView android:id="@+id/TextView02"
						android:text="1"
						android:background="@layout/rounded_corner_number"
						android:gravity="center_vertical|center_horizontal"
						android:textColor="#804f06" android:layout_height="20dip" android:layout_width="20dip"></TextView>
				</LinearLayout>
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:textColor="#ffffff" android:text="@string/help2_step1" android:textSize="14dip"></TextView>

			</LinearLayout>
			<LinearLayout android:id="@+id/LinearLayout02"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:weightSum="1.0" android:layout_marginBottom="10px">
				<LinearLayout android:id="@+id/LinearLayout03"
					android:layout_weight="0.1" android:layout_width="0dip"
					android:layout_height="30px">
					<TextView android:id="@+id/TextView02"
						android:background="@layout/rounded_corner_number" android:text="2"
						android:gravity="center_vertical|center_horizontal"
						android:textColor="#804f06" android:layout_height="20dip" android:layout_width="20dip"></TextView>
				</LinearLayout>
				<TextView android:id="@+id/TextView03"
					android:layout_height="wrap_content" android:layout_width="0dip"
					android:layout_weight="0.9" android:textColor="#ffffff" android:text="@string/help2_step2" android:textSize="14dip"></TextView>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:id="@+id/LinearLayout04"
			android:layout_height="wrap_content" android:weightSum="1.0"
			android:layout_width="fill_parent" android:layout_marginTop="10px"
			android:gravity="right|center_vertical">
			<ImageView android:id="@+id/ImageView01"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:background="@drawable/good_luck"></ImageView>
			<TextView android:id="@+id/TextView04" android:text="@string/help_footer"
				android:textColor="#f46708" android:layout_width="wrap_content" android:layout_gravity="center_vertical|center_horizontal"
				android:layout_height="wrap_content" android:textSize="18dip"></TextView>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
