<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/com.studiplaner"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:background="@color/background">
	<LinearLayout
		android:id="@+id/LinearLayout07"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:padding="5dip">
		<LinearLayout
			android:id="@+id/LinearLayout04"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_width="fill_parent">
			<TextView
				android:id="@+id/TextView01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/semesterName"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<EditText
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:id="@+id/semester_name"></EditText>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/LinearLayout05"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_width="fill_parent">
			<TextView
				android:id="@+id/TextView02"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/begin"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<DatePicker
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/semester_begin"></DatePicker>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/LinearLayout06"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_width="fill_parent">
			<TextView
				android:id="@+id/TextView03"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/end"
				android:textSize="14dip"
				android:textColor="@color/form_textcolor"></TextView>
			<DatePicker
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/semester_end"></DatePicker>
		</LinearLayout>
		<include
			layout="@layout/buttons" />
	</LinearLayout>
</ScrollView>
