<?xml version="1.0" encoding="utf-8"?>
<merge
	xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
			android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent"
			android:orientation="vertical"
			android:gravity="center_vertical"
			android:layout_height="wrap_content">
			<LinearLayout
				android:layout_width="fill_parent"
				android:weightSum="1.0"
				android:layout_height="90dip">
				<LinearLayout
					android:id="@+id/LinearLayout02"
					android:layout_weight="0.5"
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:orientation="vertical"
					android:gravity="center_vertical|center_horizontal"
					android:onClick="scheduler">
					<ImageView
						android:id="@+id/ImageView01"
						android:layout_height="40dip"
						android:layout_width="40dip"
						android:background="@drawable/cat_icon"></ImageView>
					<TextView
						android:id="@+id/TextView01"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/timetable"
						android:textSize="14dip"
						android:textColor="@color/cat_font"
						android:textStyle="bold"
						android:layout_marginTop="5dip"></TextView>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/LinearLayout02"
					android:layout_weight="0.5"
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:orientation="vertical"
					android:gravity="center_vertical|center_horizontal"
					android:onClick="subjects">
					<ImageView
						android:id="@+id/ImageView01"
						android:layout_height="40dip"
						android:layout_width="40dip"
						android:background="@drawable/cat_icon"></ImageView>
					<TextView
						android:id="@+id/TextView01"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/subjects"
						android:textSize="14dip"
						android:textColor="@color/cat_font"
						android:textStyle="bold"
						android:layout_marginTop="5dip"></TextView>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:weightSum="1.0"
				android:layout_height="90dip">
				<LinearLayout
					android:id="@+id/LinearLayout02"
					android:layout_weight="0.5"
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:orientation="vertical"
					android:gravity="center_vertical|center_horizontal"
					android:onClick="teacher">
					<ImageView
						android:id="@+id/ImageView01"
						android:layout_height="40dip"
						android:layout_width="40dip"
						android:background="@drawable/cat_icon"></ImageView>
					<TextView
						android:id="@+id/TextView01"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/lecturersOverview"
						android:textSize="14dip"
						android:textColor="@color/cat_font"
						android:textStyle="bold"
						android:layout_marginTop="5dip"></TextView>
				</LinearLayout>
				<LinearLayout
					android:id="@+id/LinearLayout02"
					android:layout_weight="0.5"
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:orientation="vertical"
					android:gravity="center_vertical|center_horizontal"
					android:onClick="note">
					<ImageView
						android:id="@+id/ImageView01"
						android:layout_height="40dip"
						android:layout_width="40dip"
						android:background="@drawable/cat_icon"></ImageView>
					<TextView
						android:id="@+id/TextView01"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="14dip"
						android:textColor="@color/cat_font"
						android:textStyle="bold"
						android:layout_marginTop="5dip"
						android:text="@string/note"></TextView>
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:layout_width="fill_parent"
				android:weightSum="1.0"
				android:layout_height="90dip">
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</merge>